Refactor Numpy and Pandas notebooks: Update execution counts, correct typos, and improve comments for clarity

--- a/Essential_libs/numpy.ipynb
+++ b/Essential_libs/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -23,9 +23,9 @@
     }
    ],
    "source": [
-    "# In this note, you are gonna learn how to use Numpy | آموزش کتابخانه نامپای\n",
+    "# How to use Numpy | کتابخانه نامپای\n",
     "\n",
-    "# creating array | ساخت آرایه (لیست)\n",
+    "# creat array | ساخت آرایه (لیست)\n",
     "\n",
     "a = np.array([1, 2, 3, 4])\n",
     "print(a)"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "# creating matrix | ساخت ماتریس\n",
+    "# creat matrix | ساخت ماتریس\n",
     "\n",
     "b = np.array([[1, 2], [3, 4]])\n",
     "print(b)"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "# reshaping | تغییر سایز و تعداد بعد لیست\n",
+    "# reshap | تغییر سایز و تعداد بعد لیست\n",
     "\n",
     "c = a.reshape(4, 1)\n",
     "print(c.shape)"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "# concatenating | به هم چسبوندن لیست ها\n",
+    "# concatenat | به هم چسبوندن لیست ها\n",
     "\n",
     "list_1 = np.array([1, 2, 3, 4, 5])\n",
     "list_2 = np.array([6, 7])\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
     }
    ],
    "source": [
-    "# slicing | انتخاب یک بخش از لیست\n",
+    "# slic | انتخاب یک بخش از لیست\n",
     "\n",
     "a = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
     "\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "# Choosing a part of an array according to the condition | انتخاب یک بخش از لیست با شرط\n",
+    "# Choos a part of an array accord to the condition | انتخاب یک بخش از لیست با شرط\n",
     "\n",
     "a = np.array([1, 2, 3, 4, 5, 6, 7, 8])\n",
     "\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "# Sorting an array | مرتب سازی لیست\n",
+    "# Sort an array | مرتب سازی لیست\n",
     "\n",
     "a = np.array([3, 7, 5, 9, 13, 4, 19, 11, 0, -5])\n",
     "\n",
@@ -255,21 +255,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 6 1 8]\n",
-      " [8 1 8 2]\n",
-      " [3 4 8 3]]\n"
+      "[[7 5 4 4]\n",
+      " [6 4 7 6]\n",
+      " [7 2 5 1]]\n"
      ]
     }
    ],
    "source": [
-    "# Creating a matrix with random values | ساخت ماتریس با مقادیر رندوم\n",
+    "# Creat a matrix with random values | ساخت ماتریس با مقادیر رندوم\n",
     "\n",
     "a = np.random.randint(1, 10, (3, 4)) # مقادیر شانسی بین 1 تا 10 و ماتریس 3 در 4\n",
     "\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "# verticaling stack | کنار هم گذاشتن عمودی چند لیست\n",
+    "# vertical stack | کنار هم گذاشتن عمودی چند لیست\n",
     "\n",
     "a = np.array([1, 2, 3])\n",
     "b = np.array([4, 5, 6])\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
     }
    ],
    "source": [
-    "# horizontaling stack | کنار هم گذاشتن افقی چند لیست\n",
+    "# horizontal stack | کنار هم گذاشتن افقی چند لیست\n",
     "\n",
     "a = np.array([1, 2, 3])\n",
     "b = np.array([4, 5, 6])\n",
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -341,12 +341,12 @@
     }
    ],
    "source": [
-    "# normalizing\n",
+    "# normaliz\n",
     "\n",
     "a = np.array([1, 2, 3])\n",
-    "# Calculating avrage of the array | اول باید میانگین لیست رو حساب کنیم\n",
+    "# Calculat avrage of the array | اول باید میانگین لیست رو حساب کنیم\n",
     "mean_a = np.mean(a)\n",
-    "# Calculating STD | بعد باید انحراف از معیار رو حساب کنیم\n",
+    "# Calculat STD | بعد باید انحراف از معیار رو حساب کنیم\n",
     "std_a = np.std(a)\n",
     "# حالا نورمالایز شده ماتریس اِی رو حساب میکنیم\n",
     "norm_a = (a - mean_a)/std_a\n",
