--- a/Essential_libs/pandas.ipynb
+++ b/Essential_libs/pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -26,9 +26,9 @@
     }
    ],
    "source": [
-    "# In this note, you are gonna learn how to use Pandas | آموزش کتابخانه پانداز\n",
+    "# How to use Pandas | کتابخانه پانداز\n",
     "\n",
-    "# Creating a dataframe | ساخت جدول\n",
+    "# Creat a dataframe | ساخت جدول\n",
     "\n",
     "data = {\n",
     "    'name': ['a', 'b', 'c'],\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "# Reading files | خوندن فایل ها\n",
+    "# Read files | خوندن فایل ها\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
     }
    ],
    "source": [
-    "# Viewing the structure and first 5 rows of the dataframe | دیدن ساختار کلی جدول و 5 سطر اولش\n",
+    "# View the structure and first 5 rows of the dataframe | دیدن ساختار کلی جدول و 5 سطر اولش\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "df = df.head()\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "# Describing the dataframe (statistical summary) | محاسبه اطلاعات آماری جدول\n",
+    "# Describ the dataframe (statistical summary) | محاسبه اطلاعات آماری جدول\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "df = df.describe()\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "# Viewing a specific column | دیدن اطلاعات ستون مشخص شده\n",
+    "# View a specific column | دیدن اطلاعات ستون مشخص شده\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "df = df['Name']\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "# Viewing a specific row | دیدن اطلاعات سطر مشخص شده\n",
+    "# View a specific row | دیدن اطلاعات سطر مشخص شده\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "df = df.iloc[2,:] # کل سطر 2 \n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "# Viewing a specific cell (row 2, column 1) | دیدن مقدار یک سلول خاص\n",
+    "# View a specific cell (row 2, column 1) | دیدن مقدار یک سلول خاص\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "df = df.iloc[2,1] # سطر 2 ستون 1 \n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
     }
    ],
    "source": [
-    "# Filtering | فیلتر کردن\n",
+    "# Filter | فیلتر کردن\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "filtered_df = df[df[\"Salary\"]>2500]\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "# Sorting the dataframe by Salary (descending) | مرتب سازی دیتافریم\n",
+    "# Sort the dataframe by Salary (descend) | مرتب سازی دیتافریم\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "# df_sorted = df.sort_values(\"Salary\") # کم به زیاد\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
     }
    ],
    "source": [
-    "# Selecting a subset of the dataframe | انتخاب بخشی از دیتافریم\n",
+    "# Select a subset of the dataframe | انتخاب بخشی از دیتافریم\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "\n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
     }
    ],
    "source": [
-    "# Grouping\n",
+    "# Group\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
     }
    ],
    "source": [
-    "# Adding a new column | اضافه کردن ستون جدید\n",
+    "# Add a new column | اضافه کردن ستون جدید\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "df[\"test\"] = [1, 2, 3, 4, 5, 6, 7]\n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
     }
    ],
    "source": [
-    "# Deleting a column | حذف کردن یک ستون\n",
+    "# Delet a column | حذف کردن یک ستون\n",
     "\n",
     "df.drop(\"test\", axis=1, inplace=True)\n",
     "\n",
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -380,13 +380,13 @@
        "7"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Counting the number of rows in the dataframe | نمایش تعداد سطر های یک دیتافریم\n",
+    "# Count the number of rows in the dataframe | نمایش تعداد سطر های یک دیتافریم\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "len(df)"
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
     }
    ],
    "source": [
-    "# Adding a new row | اضافه کردن یک سطر جدید\n",
+    "# Add a new row | اضافه کردن یک سطر جدید\n",
     "\n",
     "df = pd.read_csv('./data.csv')\n",
     "\n",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "# Detecting elements with NaN values | تشخیص المان هایی که مقدار نن دارن\n",
+    "# Detect elements with NaN values | تشخیص المان هایی که مقدار نن دارن\n",
     "# NaN = Not a Number\n",
     "\n",
     "print(df.isna())"
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
     }
    ],
    "source": [
-    "# Dropping rows with NaN values | حذف سطر هایی که دارای مقدار نن هستن\n",
+    "# Dropp rows with NaN values | حذف سطر هایی که دارای مقدار نن هستن\n",
     "\n",
     "df1 = df.dropna()\n",
     "\n",
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
     }
    ],
    "source": [
-    "# Filling NaN values with a specific value (usually 0) | (معمولا 0) و یا میتونیم مقادیر نن رو با مقدار دلخواه خودمون پر کنیم\n",
+    "# Fill NaN values with a specific value (usually 0) | (معمولا 0) و یا میتونیم مقادیر نن رو با مقدار دلخواه خودمون پر کنیم\n",
     "\n",
     "df2 = df.fillna(0)\n",
     "\n",
@@ -514,11 +514,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Saving the dataframe to a CSV file | سیو کردن اطلاعات\n",
+    "# Sav the dataframe to a CSV file | سیو کردن اطلاعات\n",
     "\n",
     "df.to_csv('new_data.csv')"
    ]
