--- a/Computer_Vision/YOLO/yolo.ipynb
+++ b/Computer_Vision/YOLO/yolo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ca4904c0",
    "metadata": {},
    "outputs": [],
@@ -171,11 +171,12 @@
     "semented_objects_image = cv2.imread('./runs/segment/predict/bicycles.jpg')\n",
     "\n",
     "cv2.imshow('Segmented objects image', semented_objects_image)\n",
+    "\n",
     "# نمایش ماسک ها\n",
     "\n",
     "# اول برای درک بهتر ایکس و وای ها یا همون مختصات ماسک رو نشون میدیم\n",
     "# results[0] : چون مشخصات داخل یه لیستن و ما عنصر اولشو میخوایم\n",
-    "# xy[0] : ماسک آبجکت سگمنت شده ااول\n",
+    "# xy[0] : ماسک آبجکت سگمنت شده اول\n",
     "print(results[0].masks.xy[0])\n",
     "\n",
     "# نمایش خود ماسک\n",
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "7f2a6485",
    "metadata": {},
    "outputs": [
@@ -333,10 +334,10 @@
     "\n",
     "pose_estimation_model = YOLO('yolov8n-pose')\n",
     "\n",
-    "results = pose_estimation_model('./images/people.webp', save=False)\n",
+    "results = pose_estimation_model('./images/people.webp', save=True)\n",
     "\n",
-    "# شیپ نقاط کلیدی\n",
-    "print(results[0].keypoints.xy.shape) # اولی تعداد انسان ها، بعدش تعداد نقاط کلیدی که همیشه 17 تاست و بعدم مختصات نقطه\n",
+    "# شِیپ نقاط کلیدی\n",
+    "print(results[0].keypoints.xy.shape) # اولی تعداد انسان ها، بعدش تعداد نقاط کلیدی که 17 تاست و بعدم مختصات نقطه\n",
     "# نمایش مختصات نقاط کلیدی\n",
     "key_points = results[0].keypoints.xy.numpy()\n",
     "print(key_points)\n",
@@ -344,7 +345,7 @@
     "# نمایش\n",
     "people_pose_estimated_image = cv2.imread('./runs/pose/predict/people.jpg')\n",
     "\n",
-    "# cv2.imshow('People pose estimated image', people_pose_estimated_image)\n",
+    "cv2.imshow('People pose estimated image', people_pose_estimated_image)\n",
     "\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
@@ -511,7 +512,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "yolo_venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
